--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://malo:<PASSWORD>@cluster0.c4scxaj.mongodb.net/malo-tours?retryWrites=true&w=majority
-DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_LOCAL=mongodb://localhost:27017/tours
 DATABASE_PASSWORD=Wavjup-gicxeg-facsu7
